# file-trace

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: patterns.md  settings.json
.claude/skills/new-endpoint/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.githooks/: pre-commit
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 35598876d5f6_initial_schema.py  4c035682da6c_add_preview_fields_to_file_versions.py  adf47b470ba6_add_composite_indexes_for_files_and_.py
backend/app/: cli.py  config.py  database.py  main.py
backend/app/api/: audit_log.py  auth.py  deps.py  files.py  folders.py  permissions.py  users.py
backend/app/models/: __init__.py  audit.py  file.py  folder.py  permission.py  user.py
backend/app/schemas/: audit.py  auth.py  files.py  folders.py  users.py
backend/app/services/: archive.py  audit.py  permissions.py  preview.py  security.py  storage.py  tree_upload.py
backend/tests/: conftest.py  test_archive.py  test_audit_api.py  test_auth.py  test_extract.py  test_file_search.py  test_files.py  test_folders.py  test_preview.py  test_security.py  test_storage.py  test_tree_upload.py  test_upload_tree.py  test_users.py
docs/superpowers/plans/: 2026-07-05-native-download-progress.md  2026-07-05-version-upload-progress.md  2026-07-06-directory-and-archive-upload.md  2026-07-08-sticky-folder-header.md  (+2 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  steiger.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
(+158 files in other folders)
