[project]
name = "file-trace-backend"
version = "0.1.0"
description = "File storage with full action audit trail"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "rarfile>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "httpx2>=2.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
